# participation_certificate

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  config.yaml  config_local.yaml.example  index.html  mkdocs.yml  pixi.toml  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap.xml
.github/workflows/: ci.yml
bestpractice/: index.html
docs/: bestpractice.md  index.md  installation.md  walkthrough.md
fonts/: README
fonts/Poppins/: OFL.txt
installation/: index.html
license/: index.html
participation_certificate/: __init__.py  deliver_certificates.py  generate_certificates.py  helper_generate_grid.py  preprocess_attendees.py  run.py  try_helpdesk.py  valdiation_upload.py
participation_certificate/email_providers/: __init__.py  base.py  brevo.py  example_provider.py.template  helpdesk.py
participation_certificate/models/: attendee.py
scripts/: hook_add_logo_to_social_cards.py  hook_copyright_year.py
search/: search_index.json
src/: __init__.py  deliver_certificates.py  generate_certificates.py  helper_generate_grid.py  preprocess_attendees.py  run.py  send_certificates.py  valdiation_upload.py
src/models/: attendee.py
stylesheets/: extra.css
tests/: test_generate_certificates.py  test_me.py
walkthrough/: index.html
